<?php
namespace App\Models;
use Illuminate\Database\Eloquent\Model;

class StockOpnameItem extends Model
{
    protected $fillable = ['stock_opname_id', 'product_id', 'system_quantity', 'actual_quantity', 'difference', 'note'];

    public function stockOpname() { return $this->belongsTo(StockOpname::class); }
    public function product() { return $this->belongsTo(Product::class); }
}
